-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.5.0
-
None
-
3
-
9555
https://maloo.whamcloud.com/test_sets/8d968884-fc11-11e2-9222-52540035b04c
stack trace from OSS:
04:58:19:INFO: task mount.lustre:15552 blocked for more than 120 seconds. 04:58:19:"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message. 04:58:19:mount.lustre D 0000000000000000 0 15552 15551 0x00000080 04:58:19: ffff880064c73558 0000000000000082 ffff880064c73528 00000000bdc11593 04:58:19: ffff880064c73578 ffffffffa03d7faf ffffffffa0de1a2f ffffffffa0de1a2b 04:58:19: ffff88006238a638 ffff880064c73fd8 000000000000fb88 ffff88006238a638 04:58:19:Call Trace: 04:58:19: [<ffffffffa03d7faf>] ? start_this_handle+0xdf/0x4a0 [jbd2] 04:58:19: [<ffffffff8150f6ae>] __mutex_lock_slowpath+0x13e/0x180 04:58:19: [<ffffffffa0427348>] ? __ldiskfs_journal_stop+0x68/0xa0 [ldiskfs] 04:58:19: [<ffffffff8150f54b>] mutex_lock+0x2b/0x50 04:58:19: [<ffffffffa0dc6d16>] osd_obj_map_recover+0x186/0x9e0 [osd_ldiskfs] 04:58:19: [<ffffffffa0dcb49c>] ? osd_scrub_get_fid+0x12c/0x210 [osd_ldiskfs] 04:58:19: [<ffffffffa0dcf7a6>] osd_ios_lf_fill+0x4a6/0x5e0 [osd_ldiskfs] 04:58:19: [<ffffffffa03f1b2f>] ldiskfs_readdir+0x3cf/0x730 [ldiskfs] 04:58:19: [<ffffffffa0dcf300>] ? osd_ios_lf_fill+0x0/0x5e0 [osd_ldiskfs] 04:58:19: [<ffffffffa03f123c>] ? free_rb_tree_fname+0x7c/0xe0 [ldiskfs] 04:58:19: [<ffffffffa0dcacae>] osd_ios_general_scan+0xae/0x1a0 [osd_ldiskfs] 04:58:19: [<ffffffffa0db7f27>] ? osd_oi_init+0x127/0x7d0 [osd_ldiskfs] 04:58:19: [<ffffffffa0dd1463>] osd_scrub_setup+0x5e3/0xe20 [osd_ldiskfs] 04:58:19: [<ffffffffa07cbbbc>] ? lprocfs_alloc_stats+0x15c/0x760 [obdclass] 04:58:19: [<ffffffffa07f595b>] ? lu_site_init+0x2ab/0x4a0 [obdclass] 04:58:19: [<ffffffffa0da74f9>] osd_device_alloc+0x5f9/0x830 [osd_ldiskfs] 04:58:19: [<ffffffffa07def87>] obd_setup+0x1d7/0x2e0 [obdclass] 04:58:19: [<ffffffffa07df298>] class_setup+0x208/0x870 [obdclass] 04:58:19: [<ffffffffa07e656c>] class_process_config+0xc1c/0x1c80 [obdclass] 04:58:19: [<ffffffffa07eb663>] ? lustre_cfg_new+0x2d3/0x6e0 [obdclass] 04:58:19: [<ffffffffa07ebbb9>] do_lcfg+0x149/0x480 [obdclass] 04:58:19: [<ffffffffa07ebf84>] lustre_start_simple+0x94/0x200 [obdclass] 04:58:19: [<ffffffffa08242ed>] server_fill_super+0xc8d/0x1a24 [obdclass] 04:58:19: [<ffffffffa07f19a8>] lustre_fill_super+0x1d8/0x530 [obdclass] 04:58:19: [<ffffffffa07f17d0>] ? lustre_fill_super+0x0/0x530 [obdclass] 04:58:19: [<ffffffff8118431f>] get_sb_nodev+0x5f/0xa0 04:58:19: [<ffffffffa07e9645>] lustre_get_sb+0x25/0x30 [obdclass] 04:58:19: [<ffffffff8118395b>] vfs_kern_mount+0x7b/0x1b0 04:58:19: [<ffffffff81183b02>] do_kern_mount+0x52/0x130 04:58:19: [<ffffffff811a3d32>] do_mount+0x2d2/0x8d0 04:58:19: [<ffffffff811a43c0>] sys_mount+0x90/0xe0 04:58:19: [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b 04:58:19:INFO: task jbd2/dm-0-8:15561 blocked for more than 120 seconds. 04:58:19:"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message. 04:58:19:jbd2/dm-0-8 D 0000000000000000 0 15561 2 0x00000080 04:58:19: ffff88005ff67d20 0000000000000046 ffff88005ff67c68 00000000000004c1 04:58:19: ffff880048cb69b8 0000000000000000 ffff8800472c6824 ffff880048cb69b8 04:58:19: ffff88006b72baf8 ffff88005ff67fd8 000000000000fb88 ffff88006b72baf8 04:58:19:Call Trace: 04:58:19: [<ffffffff81096f8e>] ? prepare_to_wait+0x4e/0x80 04:58:19: [<ffffffffa03d98df>] jbd2_journal_commit_transaction+0x19f/0x1530 [jbd2] 04:58:19: [<ffffffff810096f0>] ? __switch_to+0xd0/0x320 04:58:19: [<ffffffff81080fcc>] ? lock_timer_base+0x3c/0x70 05:02:22: [<ffffffff81096ca0>] ? autoremove_wake_function+0x0/0x40 05:02:22: [<ffffffffa03e00d8>] kjournald2+0xb8/0x220 [jbd2] 05:02:22: [<ffffffff81096ca0>] ? autoremove_wake_function+0x0/0x40 05:02:22: [<ffffffffa03e0020>] ? kjournald2+0x0/0x220 [jbd2] 05:02:22: [<ffffffff81096936>] kthread+0x96/0xa0 05:02:22: [<ffffffff8100c0ca>] child_rip+0xa/0x20 05:02:22: [<ffffffff810968a0>] ? kthread+0x0/0xa0 05:02:22: [<ffffffff8100c0c0>] ? child_rip+0x0/0x20 05:02:22:INFO: task mount.lustre:15552 blocked for more than 120 seconds. 05:02:22:"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message. 05:02:22:mount.lustre D 0000000000000000 0 15552 15551 0x00000080 05:02:22: ffff880064c73558 0000000000000082 ffff880064c73528 00000000bdc11593 05:02:22: ffff880064c73578 ffffffffa03d7faf ffffffffa0de1a2f ffffffffa0de1a2b 05:02:22: ffff88006238a638 ffff880064c73fd8 000000000000fb88 ffff88006238a638 05:02:22:Call Trace: 05:02:22: [<ffffffffa03d7faf>] ? start_this_handle+0xdf/0x4a0 [jbd2] 05:02:22: [<ffffffff8150f6ae>] __mutex_lock_slowpath+0x13e/0x180 05:02:22: [<ffffffffa0427348>] ? __ldiskfs_journal_stop+0x68/0xa0 [ldiskfs] 05:02:22: [<ffffffff8150f54b>] mutex_lock+0x2b/0x50 05:02:22: [<ffffffffa0dc6d16>] osd_obj_map_recover+0x186/0x9e0 [osd_ldiskfs] 05:02:22: [<ffffffffa0dcb49c>] ? osd_scrub_get_fid+0x12c/0x210 [osd_ldiskfs] 05:02:22: [<ffffffffa0dcf7a6>] osd_ios_lf_fill+0x4a6/0x5e0 [osd_ldiskfs] 05:02:22: [<ffffffffa03f1b2f>] ldiskfs_readdir+0x3cf/0x730 [ldiskfs] 05:02:22: [<ffffffffa0dcf300>] ? osd_ios_lf_fill+0x0/0x5e0 [osd_ldiskfs] 05:02:22: [<ffffffffa03f123c>] ? free_rb_tree_fname+0x7c/0xe0 [ldiskfs] 05:02:22: [<ffffffffa0dcacae>] osd_ios_general_scan+0xae/0x1a0 [osd_ldiskfs] 05:02:22: [<ffffffffa0db7f27>] ? osd_oi_init+0x127/0x7d0 [osd_ldiskfs] 05:02:22: [<ffffffffa0dd1463>] osd_scrub_setup+0x5e3/0xe20 [osd_ldiskfs] 05:02:22: [<ffffffffa07cbbbc>] ? lprocfs_alloc_stats+0x15c/0x760 [obdclass] 05:02:22: [<ffffffffa07f595b>] ? lu_site_init+0x2ab/0x4a0 [obdclass] 05:02:22: [<ffffffffa0da74f9>] osd_device_alloc+0x5f9/0x830 [osd_ldiskfs] 05:02:22: [<ffffffffa07def87>] obd_setup+0x1d7/0x2e0 [obdclass] 05:02:22: [<ffffffffa07df298>] class_setup+0x208/0x870 [obdclass] 05:02:22: [<ffffffffa07e656c>] class_process_config+0xc1c/0x1c80 [obdclass] 05:02:22: [<ffffffffa07eb663>] ? lustre_cfg_new+0x2d3/0x6e0 [obdclass] 05:02:22: [<ffffffffa07ebbb9>] do_lcfg+0x149/0x480 [obdclass] 05:02:22: [<ffffffffa07ebf84>] lustre_start_simple+0x94/0x200 [obdclass] 05:02:22: [<ffffffffa08242ed>] server_fill_super+0xc8d/0x1a24 [obdclass] 05:02:22: [<ffffffffa07f19a8>] lustre_fill_super+0x1d8/0x530 [obdclass] 05:02:22: [<ffffffffa07f17d0>] ? lustre_fill_super+0x0/0x530 [obdclass] 05:02:22: [<ffffffff8118431f>] get_sb_nodev+0x5f/0xa0 05:02:22: [<ffffffffa07e9645>] lustre_get_sb+0x25/0x30 [obdclass] 05:02:22: [<ffffffff8118395b>] vfs_kern_mount+0x7b/0x1b0 05:02:22: [<ffffffff81183b02>] do_kern_mount+0x52/0x130 05:02:22: [<ffffffff811a3d32>] do_mount+0x2d2/0x8d0 05:02:22: [<ffffffff811a43c0>] sys_mount+0x90/0xe0 05:02:22: [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b 05:02:22:INFO: task jbd2/dm-0-8:15561 blocked for more than 120 seconds. 05:02:22:"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message. 05:02:22:jbd2/dm-0-8 D 0000000000000000 0 15561 2 0x00000080 05:02:22: ffff88005ff67d20 0000000000000046 ffff88005ff67c68 00000000000004c1 05:02:22: ffff880048cb69b8 0000000000000000 ffff8800472c6824 ffff880048cb69b8 05:02:22: ffff88006b72baf8 ffff88005ff67fd8 000000000000fb88 ffff88006b72baf8 05:02:22:Call Trace: 05:02:22: [<ffffffff81096f8e>] ? prepare_to_wait+0x4e/0x80 05:02:22: [<ffffffffa03d98df>] jbd2_journal_commit_transaction+0x19f/0x1530 [jbd2] 05:02:22: [<ffffffff810096f0>] ? __switch_to+0xd0/0x320 05:02:22: [<ffffffff81080fcc>] ? lock_timer_base+0x3c/0x70 05:02:22: [<ffffffff81096ca0>] ? autoremove_wake_function+0x0/0x40 05:02:22: [<ffffffffa03e00d8>] kjournald2+0xb8/0x220 [jbd2] 05:02:22: [<ffffffff81096ca0>] ? autoremove_wake_function+0x0/0x40 05:02:22: [<ffffffffa03e0020>] ? kjournald2+0x0/0x220 [jbd2] 05:02:22: [<ffffffff81096936>] kthread+0x96/0xa0 05:02:22: [<ffffffff8100c0ca>] child_rip+0xa/0x20 05:02:22: [<ffffffff810968a0>] ? kthread+0x0/0xa0 05:02:22: [<ffffffff8100c0c0>] ? child_rip+0x0/0x20 05:02:22:INFO: task mount.lustre:15552 blocked for more than 120 seconds. 05:02:22:"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message. 05:02:22:mount.lustre D 0000000000000000 0 15552 15551 0x00000080 05:02:22: ffff880064c73558 0000000000000082 ffff880064c73528 00000000bdc11593 05:02:22: ffff880064c73578 ffffffffa03d7faf ffffffffa0de1a2f ffffffffa0de1a2b 05:04:24: ffff88006238a638 ffff880064c73fd8 000000000000fb88 ffff88006238a638 05:04:24:Call Trace: 05:04:24: [<ffffffffa03d7faf>] ? start_this_handle+0xdf/0x4a0 [jbd2] 05:04:24: [<ffffffff8150f6ae>] __mutex_lock_slowpath+0x13e/0x180 05:04:24: [<ffffffffa0427348>] ? __ldiskfs_journal_stop+0x68/0xa0 [ldiskfs] 05:04:24: [<ffffffff8150f54b>] mutex_lock+0x2b/0x50 05:04:24: [<ffffffffa0dc6d16>] osd_obj_map_recover+0x186/0x9e0 [osd_ldiskfs] 05:04:24: [<ffffffffa0dcb49c>] ? osd_scrub_get_fid+0x12c/0x210 [osd_ldiskfs] 05:04:24: [<ffffffffa0dcf7a6>] osd_ios_lf_fill+0x4a6/0x5e0 [osd_ldiskfs] 05:04:24: [<ffffffffa03f1b2f>] ldiskfs_readdir+0x3cf/0x730 [ldiskfs] 05:04:24: [<ffffffffa0dcf300>] ? osd_ios_lf_fill+0x0/0x5e0 [osd_ldiskfs] 05:04:24: [<ffffffffa03f123c>] ? free_rb_tree_fname+0x7c/0xe0 [ldiskfs] 05:04:24: [<ffffffffa0dcacae>] osd_ios_general_scan+0xae/0x1a0 [osd_ldiskfs] 05:04:24: [<ffffffffa0db7f27>] ? osd_oi_init+0x127/0x7d0 [osd_ldiskfs] 05:04:24: [<ffffffffa0dd1463>] osd_scrub_setup+0x5e3/0xe20 [osd_ldiskfs] 05:04:24: [<ffffffffa07cbbbc>] ? lprocfs_alloc_stats+0x15c/0x760 [obdclass] 05:04:24: [<ffffffffa07f595b>] ? lu_site_init+0x2ab/0x4a0 [obdclass] 05:04:24: [<ffffffffa0da74f9>] osd_device_alloc+0x5f9/0x830 [osd_ldiskfs] 05:04:24: [<ffffffffa07def87>] obd_setup+0x1d7/0x2e0 [obdclass] 05:04:24: [<ffffffffa07df298>] class_setup+0x208/0x870 [obdclass] 05:04:24: [<ffffffffa07e656c>] class_process_config+0xc1c/0x1c80 [obdclass] 05:04:24: [<ffffffffa07eb663>] ? lustre_cfg_new+0x2d3/0x6e0 [obdclass] 05:04:24: [<ffffffffa07ebbb9>] do_lcfg+0x149/0x480 [obdclass] 05:04:24: [<ffffffffa07ebf84>] lustre_start_simple+0x94/0x200 [obdclass] 05:04:24: [<ffffffffa08242ed>] server_fill_super+0xc8d/0x1a24 [obdclass] 05:04:24: [<ffffffffa07f19a8>] lustre_fill_super+0x1d8/0x530 [obdclass] 05:04:24: [<ffffffffa07f17d0>] ? lustre_fill_super+0x0/0x530 [obdclass] 05:04:25: [<ffffffff8118431f>] get_sb_nodev+0x5f/0xa0 05:04:25: [<ffffffffa07e9645>] lustre_get_sb+0x25/0x30 [obdclass] 05:04:25: [<ffffffff8118395b>] vfs_kern_mount+0x7b/0x1b0 05:04:25: [<ffffffff81183b02>] do_kern_mount+0x52/0x130 05:04:25: [<ffffffff811a3d32>] do_mount+0x2d2/0x8d0 05:04:25: [<ffffffff811a43c0>] sys_mount+0x90/0xe0 05:04:25: [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b 05:04:25:INFO: task jbd2/dm-0-8:15561 blocked for more than 120 seconds. 05:04:25:"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message. 05:04:25:jbd2/dm-0-8 D 0000000000000000 0 15561 2 0x00000080 05:04:25: ffff88005ff67d20 0000000000000046 ffff88005ff67c68 00000000000004c1 05:04:25: ffff880048cb69b8 0000000000000000 ffff8800472c6824 ffff880048cb69b8 05:04:25: ffff88006b72baf8 ffff88005ff67fd8 000000000000fb88 ffff88006b72baf8 05:04:25:Call Trace: 05:04:25: [<ffffffff81096f8e>] ? prepare_to_wait+0x4e/0x80 05:04:25: [<ffffffffa03d98df>] jbd2_journal_commit_transaction+0x19f/0x1530 [jbd2] 05:04:25: [<ffffffff810096f0>] ? __switch_to+0xd0/0x320 05:04:25: [<ffffffff81080fcc>] ? lock_timer_base+0x3c/0x70 05:04:25: [<ffffffff81096ca0>] ? autoremove_wake_function+0x0/0x40 05:04:25: [<ffffffffa03e00d8>] kjournald2+0xb8/0x220 [jbd2] 05:04:25: [<ffffffff81096ca0>] ? autoremove_wake_function+0x0/0x40 05:04:25: [<ffffffffa03e0020>] ? kjournald2+0x0/0x220 [jbd2] 05:04:25: [<ffffffff81096936>] kthread+0x96/0xa0 05:04:25: [<ffffffff8100c0ca>] child_rip+0xa/0x20 05:04:25: [<ffffffff810968a0>] ? kthread+0x0/0xa0 05:04:25: [<ffffffff8100c0c0>] ? child_rip+0x0/0x20 05:04:25:INFO: task mount.lustre:15552 blocked for more than 120 seconds. 05:04:25:"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message. 05:04:25:mount.lustre D 0000000000000000 0 15552 15551 0x00000080 05:04:25: ffff880064c73558 0000000000000082 ffff880064c73528 00000000bdc11593 05:04:25: ffff880064c73578 ffffffffa03d7faf ffffffffa0de1a2f ffffffffa0de1a2b 05:04:25: ffff88006238a638 ffff880064c73fd8 000000000000fb88 ffff88006238a638 05:04:25:Call Trace: 05:04:25: [<ffffffffa03d7faf>] ? start_this_handle+0xdf/0x4a0 [jbd2] 05:04:25: [<ffffffff8150f6ae>] __mutex_lock_slowpath+0x13e/0x180 05:04:25: [<ffffffffa0427348>] ? __ldiskfs_journal_stop+0x68/0xa0 [ldiskfs] 05:04:25: [<ffffffff8150f54b>] mutex_lock+0x2b/0x50 05:04:25: [<ffffffffa0dc6d16>] osd_obj_map_recover+0x186/0x9e0 [osd_ldiskfs] 05:04:25: [<ffffffffa0dcb49c>] ? osd_scrub_get_fid+0x12c/0x210 [osd_ldiskfs] 05:04:25: [<ffffffffa0dcf7a6>] osd_ios_lf_fill+0x4a6/0x5e0 [osd_ldiskfs] 05:04:25: [<ffffffffa03f1b2f>] ldiskfs_readdir+0x3cf/0x730 [ldiskfs] 05:04:25: [<ffffffffa0dcf300>] ? osd_ios_lf_fill+0x0/0x5e0 [osd_ldiskfs] 05:04:25: [<ffffffffa03f123c>] ? free_rb_tree_fname+0x7c/0xe0 [ldiskfs] 05:06:20: [<ffffffffa0dcacae>] osd_ios_general_scan+0xae/0x1a0 [osd_ldiskfs] 05:06:20: [<ffffffffa0db7f27>] ? osd_oi_init+0x127/0x7d0 [osd_ldiskfs] 05:06:20: [<ffffffffa0dd1463>] osd_scrub_setup+0x5e3/0xe20 [osd_ldiskfs] 05:06:20: [<ffffffffa07cbbbc>] ? lprocfs_alloc_stats+0x15c/0x760 [obdclass] 05:06:20: [<ffffffffa07f595b>] ? lu_site_init+0x2ab/0x4a0 [obdclass] 05:06:20: [<ffffffffa0da74f9>] osd_device_alloc+0x5f9/0x830 [osd_ldiskfs] 05:06:20: [<ffffffffa07def87>] obd_setup+0x1d7/0x2e0 [obdclass] 05:06:20: [<ffffffffa07df298>] class_setup+0x208/0x870 [obdclass] 05:06:20: [<ffffffffa07e656c>] class_process_config+0xc1c/0x1c80 [obdclass] 05:06:20: [<ffffffffa07eb663>] ? lustre_cfg_new+0x2d3/0x6e0 [obdclass] 05:06:20: [<ffffffffa07ebbb9>] do_lcfg+0x149/0x480 [obdclass] 05:06:20: [<ffffffffa07ebf84>] lustre_start_simple+0x94/0x200 [obdclass] 05:06:20: [<ffffffffa08242ed>] server_fill_super+0xc8d/0x1a24 [obdclass] 05:06:20: [<ffffffffa07f19a8>] lustre_fill_super+0x1d8/0x530 [obdclass] 05:06:20: [<ffffffffa07f17d0>] ? lustre_fill_super+0x0/0x530 [obdclass] 05:06:20: [<ffffffff8118431f>] get_sb_nodev+0x5f/0xa0 05:06:20: [<ffffffffa07e9645>] lustre_get_sb+0x25/0x30 [obdclass] 05:06:20: [<ffffffff8118395b>] vfs_kern_mount+0x7b/0x1b0 05:06:20: [<ffffffff81183b02>] do_kern_mount+0x52/0x130 05:06:20: [<ffffffff811a3d32>] do_mount+0x2d2/0x8d0 05:06:20: [<ffffffff811a43c0>] sys_mount+0x90/0xe0 05:06:20: [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b 05:06:20:INFO: task jbd2/dm-0-8:15561 blocked for more than 120 seconds. 05:06:20:"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message. 05:06:20:jbd2/dm-0-8 D 0000000000000000 0 15561 2 0x00000080 05:06:20: ffff88005ff67d20 0000000000000046 ffff88005ff67c68 00000000000004c1 05:06:20: ffff880048cb69b8 0000000000000000 ffff8800472c6824 ffff880048cb69b8 05:06:20: ffff88006b72baf8 ffff88005ff67fd8 000000000000fb88 ffff88006b72baf8 05:06:20:Call Trace: 05:06:20: [<ffffffff81096f8e>] ? prepare_to_wait+0x4e/0x80 05:06:20: [<ffffffffa03d98df>] jbd2_journal_commit_transaction+0x19f/0x1530 [jbd2] 05:06:20: [<ffffffff810096f0>] ? __switch_to+0xd0/0x320 05:06:20: [<ffffffff81080fcc>] ? lock_timer_base+0x3c/0x70 05:06:20: [<ffffffff81096ca0>] ? autoremove_wake_function+0x0/0x40 05:06:20: [<ffffffffa03e00d8>] kjournald2+0xb8/0x220 [jbd2] 05:06:20: [<ffffffff81096ca0>] ? autoremove_wake_function+0x0/0x40 05:06:20: [<ffffffffa03e0020>] ? kjournald2+0x0/0x220 [jbd2] 05:06:20: [<ffffffff81096936>] kthread+0x96/0xa0 05:06:20: [<ffffffff8100c0ca>] child_rip+0xa/0x20 05:06:20: [<ffffffff810968a0>] ? kthread+0x0/0xa0 05:06:20: [<ffffffff8100c0c0>] ? child_rip+0x0/0x20 05:06:20:INFO: task mount.lustre:15552 blocked for more than 120 seconds. 05:06:20:"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message. 05:06:20:mount.lustre D 0000000000000000 0 15552 15551 0x00000080 05:06:20: ffff880064c73558 0000000000000082 ffff880064c73528 00000000bdc11593 05:06:20: ffff880064c73578 ffffffffa03d7faf ffffffffa0de1a2f ffffffffa0de1a2b 05:06:20: ffff88006238a638 ffff880064c73fd8 000000000000fb88 ffff88006238a638 05:06:20:Call Trace: 05:06:20: [<ffffffffa03d7faf>] ? start_this_handle+0xdf/0x4a0 [jbd2] 05:06:20: [<ffffffff8150f6ae>] __mutex_lock_slowpath+0x13e/0x180 05:06:20: [<ffffffffa0427348>] ? __ldiskfs_journal_stop+0x68/0xa0 [ldiskfs] 05:06:20: [<ffffffff8150f54b>] mutex_lock+0x2b/0x50 05:06:20: [<ffffffffa0dc6d16>] osd_obj_map_recover+0x186/0x9e0 [osd_ldiskfs] 05:06:20: [<ffffffffa0dcb49c>] ? osd_scrub_get_fid+0x12c/0x210 [osd_ldiskfs] 05:06:20: [<ffffffffa0dcf7a6>] osd_ios_lf_fill+0x4a6/0x5e0 [osd_ldiskfs] 05:06:20: [<ffffffffa03f1b2f>] ldiskfs_readdir+0x3cf/0x730 [ldiskfs] 05:06:20: [<ffffffffa0dcf300>] ? osd_ios_lf_fill+0x0/0x5e0 [osd_ldiskfs] 05:06:20: [<ffffffffa03f123c>] ? free_rb_tree_fname+0x7c/0xe0 [ldiskfs] 05:06:20: [<ffffffffa0dcacae>] osd_ios_general_scan+0xae/0x1a0 [osd_ldiskfs] 05:06:20: [<ffffffffa0db7f27>] ? osd_oi_init+0x127/0x7d0 [osd_ldiskfs] 05:06:20: [<ffffffffa0dd1463>] osd_scrub_setup+0x5e3/0xe20 [osd_ldiskfs] 05:06:20: [<ffffffffa07cbbbc>] ? lprocfs_alloc_stats+0x15c/0x760 [obdclass] 05:06:20: [<ffffffffa07f595b>] ? lu_site_init+0x2ab/0x4a0 [obdclass] 05:06:20: [<ffffffffa0da74f9>] osd_device_alloc+0x5f9/0x830 [osd_ldiskfs] 05:06:20: [<ffffffffa07def87>] obd_setup+0x1d7/0x2e0 [obdclass] 05:06:20: [<ffffffffa07df298>] class_setup+0x208/0x870 [obdclass] 05:06:20: [<ffffffffa07e656c>] class_process_config+0xc1c/0x1c80 [obdclass] 05:06:20: [<ffffffffa07eb663>] ? lustre_cfg_new+0x2d3/0x6e0 [obdclass] 05:06:20: [<ffffffffa07ebbb9>] do_lcfg+0x149/0x480 [obdclass]
- is related to
-
LU-3582 Runtests failed: old and new files are different: rc=11
-
- Resolved
-