LU-3706 scrub: fix mutex leak in osd_obj_map_recover()

We forget to release inode::i_mutex on the /O/<seq>/<dx> when meet OI
mapping conflict in osd_obj_map_recover() to recover objects from the
/lost+found to their original places. Such mutex leak will cause the
OI scrub thread or other threads to be hung when access /O/<seq>/<dx>
next time.

Test-Parameters: testlist=sanity-scrub
Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: Idc3b99aea5591f546a6d33e5d1fe015a2aac0167
Reviewed-on: http://review.whamcloud.com/7534
Reviewed-by: Bobi Jam <bobijam@gmail.com>
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>